force-app/main/default/objects/Control_Plan__c/Control_Plan__c.object-meta.xml
<CustomObject>
    <label>Control Plan</label>
    <nameField>
        <label>Control Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Control Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>