force-app/main/default/objects/Control_Plan__c/fields/Category_Id__c.field-meta.xml
<CustomField>
    <fullName>Category_Id__c</fullName>
    <label>Category Id</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>*Gather Values From ERP*</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>