force-app/main/default/objects/Control_Plan__c/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <description>Depending on selection other requirements are enforced for Inner/Outer Min and Max.</description>
    <inlineHelpText>When set to &quot;Categorical&quot; or &quot;Variable&quot; these values must be provided.</inlineHelpText>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attribute</fullName>
            </value>
            <value>
                <fullName>Variable</fullName>
            </value>
            <value>
                <fullName>Categorical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>