force-app/main/default/objects/Control_Plan__c/fields/Outer_Max__c.field-meta.xml
<CustomField>
    <fullName>Outer_Max__c</fullName>
    <label>Outer Max</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>