force-app/main/default/objects/Control_Plan__c/fields/Outer_Min__c.field-meta.xml
<CustomField>
    <fullName>Outer_Min__c</fullName>
    <label>Outer Min</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>