force-app/main/default/objects/Control_Plan__c/fields/Routing_Operation_Number__c.field-meta.xml
<CustomField>
    <fullName>Routing_Operation_Number__c</fullName>
    <formula>Routing_Parent__r.Operation_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Routing Operation Number</label>
    <type>Text</type>
</CustomField>