force-app/main/default/objects/Control_Plan__c/fields/Routing_Parent__c.field-meta.xml
<CustomField>
    <fullName>Routing_Parent__c</fullName>
    <label>Routing Parent</label>
    <referenceTo>Routing__c</referenceTo>
    <relationshipLabel>Control Plans</relationshipLabel>
    <relationshipName>Control_Plans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>