force-app/main/default/objects/Control_Plan__c/fields/Test_Operation_Description__c.field-meta.xml
<CustomField>
    <fullName>Test_Operation_Description__c</fullName>
    <label>Test Operation Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>