force-app/main/default/objects/Control_Plan__c/validationRules/Inner_Limits.validationRule-meta.xml
<ValidationRule>
    <fullName>Inner_Limits</fullName>
    <active>true</active>
    <errorConditionFormula>Inner_Max__c &lt;  Inner_Min__c</errorConditionFormula>
    <errorMessage>Inner Max must be greater than Inner Min</errorMessage>
</ValidationRule>