force-app/main/default/objects/Control_Plan__c/validationRules/Nominal_Value_Must_Be_Set.validationRule-meta.xml
<ValidationRule>
    <fullName>Nominal_Value_Must_Be_Set</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  TEXT(Data_Type__c) = &apos;Attribute&apos;,
  AND(
    ISBLANK(Process_Characteristics__c),
    ISNULL(Process_Characteristics__c)
  )
)</errorConditionFormula>
    <errorMessage>Nominal Value must be set if Data Type is set to &quot;Attribute&quot;</errorMessage>
</ValidationRule>