force-app/main/default/objects/Control_Plan__c/validationRules/Outer_Limits.validationRule-meta.xml
<ValidationRule>
    <fullName>Outer_Limits</fullName>
    <active>true</active>
    <errorConditionFormula>Outer_Max__c &lt; Outer_Min__c</errorConditionFormula>
    <errorMessage>Outer Max must be greater than Outer Min</errorMessage>
</ValidationRule>