force-app/main/default/objects/Control_Plan__c/validationRules/Process_Characteristics_May_Be_Set.validationRule-meta.xml
<ValidationRule>
    <fullName>Process_Characteristics_May_Be_Set</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(
    TEXT(Data_Type__c) = &apos;Variable&apos;
  ),
  NOT(
    AND(
      ISBLANK(Process_Characteristics__c),
      ISNULL(Process_Characteristics__c)
    )
  )
)</errorConditionFormula>
    <errorMessage>Process Characteristics may only be set if the Data Type is set to &quot;Variable&quot;</errorMessage>
</ValidationRule>